Start -Basis for physics report

--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,9 @@
 %FILL THESE IN
-\def\mytitle{Coursework Report}
-\def\mykeywords{Fill, These, In, So, google, can, find, your, report}
-\def\myauthor{Cool Student}
-\def\contact{4008000@napier.ac.uk}
-\def\mymodule{Module Title (SET00000)}
+\def\mytitle{Collisions Coursework Report}
+\def\mykeywords{Collisions, OBB, Collider, Impulse}
+\def\myauthor{Emma Parsley}
+\def\contact{40206111@live.napier.ac.uk}
+\def\mymodule{Physics Based Animation (SET09119)}
 %YOU DON'T NEED TO TOUCH ANYTHING BELOW
 \documentclass[10pt, a4paper]{article}
 \usepackage[a4paper,outer=1.5cm,inner=1.5cm,top=1.75cm,bottom=1.5cm]{geometry}
@@ -70,12 +70,13 @@
 \begin{document}
 	\maketitle
 	\begin{abstract}
-		\lipsum[2]
+		Creating sphere and box colliders and having them react to themselves and each other in a scene.
 	\end{abstract}
     
 	\textbf{Keywords -- }{\mykeywords}
     %START FROM HERE
 	\section{Introduction}
+	
     \paragraph{Referencing}
     You should cite References like this: \cite{Keshav}. The references are saved in an external .bib file, and will automatically be added ot the bibliography at the end once cited.
     
@@ -138,9 +139,5 @@ print a newline\;
 }
 \caption{FizzBuzz}
 \end{algorithm}
-	
-\section{Conclusion}	
-\bibliographystyle{ieeetr}
-\bibliography{references}
 		
 \end{document}
