--- a/references.bib
+++ b/references.bib
@@ -1,15 +1,14 @@
 @article{Keshav,
-    author = {Keshav, S.},
-    title = {How to Read a Paper},
-    journal = {SIGCOMM Comput. Commun. Rev.},
-    issue_date = {July 2007},
-    volume = {37},
-    number = {3},
-    month = jul,
-    year = {2007},
+    author = {The Chemical Workshop},
+    title = {Taser / High Voltage / Stun Gun / Shock },
+    journal = {},
+    issue_date = {},
+    volume = {},
+    number = {},
+    year = {},
     issn = {0146-4833},
-    pages = {83--84},
-    numpages = {2},
+    pages = {},
+    numpages = {},
     url = {http://doi.acm.org/10.1145/1273445.1273458},
     doi = {10.1145/1273445.1273458},
     acmid = {1273458},
