--- a/report.tex
+++ b/report.tex
@@ -93,7 +93,9 @@
 	
 	\section{Game Implementation}
 	
+	\figuremacro{h}{Walls}{Early Game}{ - Getting wall spites to tile}{1.0}
 	\section{Evaluation}
+	
 	\paragraph{Comparison to original concept}
 	\paragraph{Comparison against other games in the genre}
 	\paragraph{Quality of the Game}
